# freertos-stm32

./: .gitignore  CMakeLists.txt  README.md  project-outline.md  setup-thinkpad.sh  thinkpad-setup.sh
cmake/: arm-none-eabi.cmake  stm32f411.cmake
linker/: STM32F411RETx_FLASH.ld
src/: FreeRTOSConfig.h  app_types.h  main.c  stm32f4xx_hal_conf.h
src/drivers/: bme280.c  bme280.h  flash_config.c  flash_config.h
src/tasks/: cli_task.c  cli_task.h  processing_task.c  processing_task.h  sensor_task.c  sensor_task.h  uart_task.c  uart_task.h  watchdog_task.c  watchdog_task.h
